k8s/groups/groups-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: taskify-groups
  labels:
    app: taskify-groups
spec:
  replicas: 2
  selector:
    matchLabels:
      app: taskify-groups
  template:
    metadata:
      labels:
        app: taskify-groups
    spec:
      containers:
        - name: taskify-groups
          image: sohamdalvi1011/taskify-groups:v0.0.1
          ports:
            - containerPort: 3000
          readinessProbe:
            httpGet:
              path: /api/groups/readyness
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /api/groups/readyness
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 20
            timeoutSeconds: 2
            failureThreshold: 5
