k8s/groups/groups-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: groups-service
  namespace: default
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 3000
  selector:
    app: taskify-groups
  type: ClusterIP
