k8s/groups/groups-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: groups-ingress
spec:
  ingressClassName: traefik
  rules:
  - host: taskify.192.168.1.89.nip.io
    http:
      paths:
      - backend:
          service:
            name: groups-service
            port:
              number: 80
        path: /api/groups
        pathType: Prefix
